# RisohEditor

./: CMakeLists.txt
RisohCompare/: CMakeLists.txt  RisohCompare.cpp  RisohCompare.hpp
compare/: CCompareWorkerThread.cpp  CCompareWorkerThread.h  CCompareWorkerThread_old.cpp  CConflictResolveDialog.cpp  CConflictResolveDialog.h  CConflictResolveDialog_old.cpp  CFileDropListCtrl.cpp  CFileDropListCtrl.h  CFileDropListCtrl_old.cpp  CFormRcBase.cpp  CFormRcBase.h  CFormRcBase_old.cpp  CFormRcCompare.cpp  CFormRcCompare.h  CFormRcCompare_old.cpp  CMakeLists.txt  CRcCompareControler.cpp  CRcCompareControler.h  CRcCompareControler_old.cpp  CRcCompareViewer.cpp  CRcCompareViewer.h  CRcCompareViewer_old.cpp  CTaskEditDialog.cpp  CTaskEditDialog.h  CTaskEditDialog_old.cpp  CompareEngine.cpp  CompareEngine.h  CompareProjectConfig.cpp  CompareProjectConfig.h  CompareProjectConfig_old.cpp  CompareTypes.h  LevelManagerJsonHelper.cpp  LevelManagerJsonHelper.h  LevelManagerJsonHelper_old.cpp  MergeEngine.cpp  MergeEngine.h  NavigationTree.cpp  NavigationTree.h  RcCompare.cpp  RcCompare_res.rc  (+14 more)
compare/res/: RcCompare.manifest
src/: CMakeLists.txt  RisohCompareSettings.hpp
